fix loader z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,6 @@ hr {
 	position: absolute;
 	top: 50%; left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: 99999;
 	margin-left: 18px;
 	visibility: hidden;
 }
